--- a/contact.css
+++ b/contact.css
@@ -1,5 +1,5 @@
 body{
-	background-image: C:\html\New folder\contact.jpg;
+	background-image: contact.jpg;
 	background-size: cover;
 	background-attachment: fixed;
 	margin: 0;
